Fix canvas sizing and hard to read text

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ section {
 
 .hero-bio {
     font-size: 1rem;
-    color: var(--color-muted);
+    color: var(--color-ink);
     margin-top: 0.5rem;
     max-width: 480px;
 }
@@ -157,7 +157,7 @@ h1 span {
 p {
     font-size: 1.5rem;
     font-weight: 300;
-    color: var(--color-muted);
+    color: var(--color-ink);
     margin-top: 1rem;
 }
 
@@ -201,7 +201,7 @@ h3 {
 .meta-label {
     font-size: 1.2rem;
     text-transform: uppercase;
-    color: var(--color-muted);
+    color: var(--color-ink);
     letter-spacing: 0.1rem;
 }
 
@@ -488,7 +488,7 @@ h2 {
 
 .edu-date {
     font-size: 0.8rem;
-    color: var(--color-muted);
+    color: var(--color-ink);
     text-transform: uppercase;
     letter-spacing: 0.1rem;
 }
@@ -545,7 +545,7 @@ h2 {
     display:block;
     margin-top: 1rem;
     font-size: 0.9rem;
-    color: var(--color-muted);
+    color: var(--color-ink);
     font-style: normal;
 }
 
@@ -595,7 +595,7 @@ h2 {
 }
 
 .subject-name {
-    color: var(--color-muted);
+    color: var(--color-ink);
 }
 
 .module-tags {
@@ -609,7 +609,7 @@ h2 {
     padding: 0.2rem 0.7rem;
     border-radius: 99px;
     border: 1px solid var(--color-border);
-    color: var(--color-muted);
+    color: var(--color-ink);
 }
 
 @keyframes pulse {
@@ -668,7 +668,7 @@ h2 {
 
 .contact-item span, .contact-item a {
     font-size: 1rem;
-    color: var(--color-muted);
+    color: var(--color-ink);
     text-decoration: none;
     word-break: break-all;
 }
@@ -677,44 +677,5 @@ h2 {
     color: var(--color-green);
 }
 
-@media (max-width: 768px) {
-    h1 {
-        font-size: 3rem;;
-    }
 
-    h2 {
-        font-size: 2.5rem;
-    }
-
-    #about {
-        flex-direction: column;
-        padding: 6rem 1.5rem 3rem 1.5rem;
-    }
-
-    .about-right {
-        width: 100%;
-        justify-content: flex-start;
-    }
-
-    .meta {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .cards-grid {
-        grid-template-columns: repeat(2 1fr);
-    }
-
-    .projects-grid {
-        grid-template-columns: 1fr;
-    }
-
-    nav ul {
-        display: none;
-    }
-
-    .nav-right {
-        gap: 1rem;
-    }
-}
 
